<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_fragment_home">

    <fragment
        android:id="@+id/nav_fragment_home"
        android:name="com.datn.cookingguideapp.ui.home.homeTab.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fragment_notifications"
        android:name="com.datn.cookingguideapp.ui.home.notifyTab.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_fragment_profile"
        android:name="com.datn.cookingguideapp.ui.home.profileTab.FragmentProfile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />


</navigation>