<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_navigation"
    app:startDestination="@id/nav_fragment_splash">

    <fragment
        android:id="@+id/nav_fragment_login"
        android:name="com.datn.cookingguideapp.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@+id/nav_fragment_register" />
    </fragment>

    <fragment
        android:id="@+id/nav_fragment_register"
        android:name="com.datn.cookingguideapp.ui.auth.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_fragment_splash"
        android:name="com.datn.cookingguideapp.ui.auth.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@+id/nav_fragment_login"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>